Results: minor edits in the beginning

--- a/main.tex
+++ b/main.tex
@@ -110,19 +110,23 @@ Here we use high-speed Ca imaging data to infer connectivity of small sub-networ
 
 For all mathematical methods, we provide their names and their interpretation in the main text, but leave definitions and details for the “Methods” section. For statistical analyses, we report p-values without correction, and interpret them according to Fisher, and not Neyman-Pearson philosophy \citep{greenland2016}. This approach is preferable for this study, as many of our analyses are not independent, but still ask different questions, and rely on different null model hypotheses. At the interpretation step, we pay more attention to hypotheses supported by several alternative analyses.
 
-We performed Ca imaging in 14 stage 45-46 tadpoles, and 16 stage 48-49 tadpoles, recording responses from 128$\pm$40 tectal cells (between 84 and 229; here and below “$\pm$” after the mean denotes standard deviation). Unless stated otherwise, sample sizes $n=$ 14 and 16 animals for stage 46 and 49 tadpoles respectively apply to all analyses between younger and older animals reported in this study. To each tadpole, we presented a sequence of three different stimuli, always in the same order: a looming stimulus, followed by a full-field flash, followed by a spatially “scrambled” looming stimulus (Fig 1A). Scrambled stimuli were identical to looming, except that the visual field was split into a 7x7 grid of square tiles, and these tiles were randomly rearranged in space. In total we presented 60$\pm$11 stimuli to every animal, which means that a stimulus of every type was presented 20$\pm$4 times. High speed calcium imaging signals \citep{xu2011,truszkowski2017} were recorded from one layer of “deep” principal tectal neurons in the tectum (Fig 1B); from these videos we then extracted fluorescence traces (Fig 1C), and inferred average spiking of each neuron within every frame (Fig 1D).
+We performed Ca imaging in 14 stage 45-46 tadpoles, and 16 stage 48-49 tadpoles, recording responses from 128$\pm$40 tectal cells (between 84 and 229; here and below “$\pm$” after the mean denotes standard deviation). Unless stated otherwise, sample sizes $n=$ 14 and 16 animals for stage 46 and 49 tadpoles respectively apply to all analyses between younger and older animals reported in this study. To each tadpole, we presented a sequence of three different stimuli, always in the same order: a looming stimulus, followed by a full-field flash, followed by a spatially “scrambled” looming stimulus (Fig 1A). Scrambled stimuli were identical to looming, except that the visual field was split into a 7x7 grid of square tiles, and these tiles were randomly rearranged in space. In total we presented 60$\pm$11 stimuli to every animal, which means that a stimulus of every type was presented 20$\pm$4 times. High speed calcium imaging signals \citep{xu2011,truszkowski2017} were recorded from one layer of “deep” principal tectal neurons in the tectum (Fig 1B); from these videos we then extracted fluorescence traces (Fig 1C, D), and inferred average spiking of each neuron within every frame (Fig 1E).
 
 \subsection*{Responses and stimulus selectivity}
 
-Similar to previously published electrophysiology experiments \citep{khakhalin2014}, responses to flashes were fast, with a sharp peak and mild recurrent activation after the peak, while responses to looming stimuli were slower, and followed by strong recurrent activation (Fig 1E). Responses to both looming and scrambled stimuli were highly variable from one animal to another; for scrambled stimuli this can be easily explained, as frame tiles were rearranged differently in different experiments, increasing response variability. For looming stimuli however, this may indicate either an inherent variability of network configuration from animal to animal, or different levels of recurrent inhibition across preparations. We did not quantify differences in response shapes, and proceeded with the analysis of response amplitudes.
+Similar to previously published electrophysiology experiments \citep{khakhalin2014}, responses to flashes were fast, with a sharp peak and mild recurrent activation after the peak, while responses to looming stimuli were slower, and followed by strong recurrent activation (Fig 2A). Responses to both looming and scrambled stimuli were highly variable from one animal to another; for scrambled stimuli this can be easily explained, as frame tiles were rearranged differently in different experiments, increasing response variability. For looming stimuli however, this may indicate either an inherent variability of network configuration from animal to animal, or different levels of recurrent inhibition across preparations. We did not quantify differences in response shapes, and proceeded with the analysis of response amplitudes.
 
-The total output of observed tectal networks tended to be higher in response to looming stimuli than to flashes (on average, 39$\pm$29\% higher for younger; 25$\pm$25\% higher for older tadpoles; $p_{t1}=$ 2e-4 and 1e-3 respectively; Fig. 1F). There was no change in this preference in development ($p_t$=0.15). Responses to looming and scrambled stimuli did not differ (average differences of $-$0.03$\pm$0.15 and $-$0.01$\pm$0.20; $p_{t1}=$ 0.45 and 0.78 for younger and older animals respectively), and there was no different in development ($p_t=$0.80). This supports our prior observations that in tadpoles, the total tectal response depends mostly on the dynamics of visual stimuli, rather than on their geometry \citep{khakhalin2014,jang2016}.
+The total output of observed tectal networks tended to be higher in response to looming stimuli than to flashes (on average, 39$\pm$29\% higher for younger; 25$\pm$25\% higher for older tadpoles; $p_{t1}=$ 2e-4 and 1e-3 respectively; Fig. 1B). There was no change in this preference in development ($p_t$=0.15). Responses to looming and scrambled stimuli did not differ (average differences of $-$0.03$\pm$0.15 and $-$0.01$\pm$0.20; $p_{t1}=$ 0.45 and 0.78 for younger and older animals respectively), and there was no different in development ($p_t=$ 0.80). This supports our prior observations that in tadpoles, the total tectal response depends mostly on the dynamics of visual stimuli, rather than on their geometry \citep{khakhalin2014,jang2016}.
 
-To quantify selectivity of each individual tectal cell, we used Cohen’s $d$ effect size of cell  responses to different stimuli (the difference in mean responses, divided by the pooled standard deviation of response amplitudes). We calculated two different measures of selectivity: that for "looming stimuli over flashes" (a type of selectivity that may rely on both stimulus dynamics and its spatial organization), and "looming over scrambled" stimuli (that can only rely on spatial organization, as these stimuli shared dynamics). On average, tectal cells were selective for looming stimuli, with no difference between younger and older tadpoles (0.67$\pm$0.50 and 0.46$\pm$0.47 respectively, $p_t=$ 0.3). The share of cells that responded to looming stimuli stronger than to flashes also did not change in development (84$\pm$23\%, 77$\pm$21\%; $p_t=$ 0.4). There was however a developmental change in the distribution of cell selectivities: while the variance of selectivity did not change ($p_t=$ 0.3), there was a change in skew ($p_t=$ 0.02), which was positive in younger animals, but negative in older ones. The skew decreased because the difference between the top-selective (90th percentile) and median selective cells within each brain became lower in older animals: 0.75$\pm$0.26 in younger, but 0.53$\pm$0.27 in older tadpoles ($p_t=$ 0.03). These results are unexpected: in collision avoidance tests stage 49 tadpoles perform better than stage 46 tadpoles \citep{dong2009}, so we expected them to develop a subset of looming-selective cells, as described in adult frogs \citep{nakagawa2010otneurons,baranauskas2012}, and other vertebrates \citep{wang1992pigeon,wu2005pigeon,liu2011cat}. Yet in our experiments selectivity for looming stimuli did not change, and a subpopulation of strongly selective cells not only did not emerge in older animals, but became less prominent.
+To quantify selectivity of individual tectal cells, we used Cohen’s $d$ effect size, in each cell, comparing amplitudes of responses to stimuli of different types (the difference in means, divided by the pooled standard deviation). We considered two measures of selectivity: that for "looming stimuli over flashes" (a type of selectivity that may rely on both stimulus dynamics and its spatial organization), and "looming over scrambled" (that can only rely on spatial organization of stimuli, as they had the same dynamics). On average, tectal cells were selective for looming stimuli (within-brain mean $d$ of 0.67$\pm$0.50 and 0.46$\pm$0.47 in younger and older tadpoles respectively), and there was no difference between stages ($p_t=$ 0.3). The share of cells that responded to looming stimuli stronger than to flashes also did not change in development (84$\pm$23\%, 77$\pm$21\%; $p_t=$ 0.4). There was however a developmental change in the distribution of cell selectivities within each brain: while the variance did not change ($p_t=$ 0.3), there was a change in skew ($p_t=$ 0.02), which was positive in younger animals, but negative in older ones, reflecting a decrease in number of top-selective cells within each brain (Fig. 2I). A more intuitive way to quantify this difference is by looking at the gap between top-selective (90th percentile) and median selective cells, which went down in older animals (0.75$\pm$0.26 in younger, but 0.53$\pm$0.27 in older tadpoles; $p_t=$ 0.03). Overall, these results were quite unexpected: in collision avoidance tests stage 49 tadpoles perform better than stage 46 tadpoles \citep{dong2009}, and we expected them to develop a subset of looming-selective cells, as described in adult frogs \citep{nakagawa2010otneurons,baranauskas2012}, and other vertebrates \citep{wang1992pigeon,wu2005pigeon,liu2011cat}. Yet in our experiments selectivity for looming stimuli did not change, and a subpopulation of strongly selective cells not only did not emerge in older animals, but became less prominent.
 
-We then considered the second, more computationally demanding definition of selectivity: a preference for spatially organized looming stimuli over scrambled stimuli. On average, tectal cells did not have a preference when responding to these two stimuli (average selectivity of $-$0.07$\pm$0.33 in younger tadpoles, $-$0.04$\pm$0.49 in older ones), and the value of average selectivity did not change in development ($p_t=$ 0.9). The share of cells that responded to looming stronger than to scrambled stimuli was at a chance level for both developmental stages (46$\pm$31\%, 48$\pm$37\%, $p_t=$ 0.9), and there was no change in either within-brain variance of this selectivity ($p_t=$ 0.9), or the 90$-$50 percentile asymmetry of values ($p_t=$ 0.8).
+%For the majority of preparations, tectal responses were reliably selective for looming stimuli within each experiment ($p_t<$0.05 in 11/14 and 9/16 experiments for stage 46 and 49 tadpoles respectively), the remaining 10 preparations did not have this preference. Interestingly, the majority of experiments with no preference happened in older, and thus presumably more developed animals.
 
-The selectivity for scrambled stimuli over flashes correlated with selectivity for looming stimuli over flashes in both developmental groups: within-brain $r$=0.82$\pm$0.13, $p_{1t}$=3e-12 for younger animals, and 0.75$\pm$0.18, $p_{t1}$=3e-11 older ones; no change in development ($p_t$=0.3). On the contrary, the preference for looming over flashes did not correlate with preference for looming over scrambled stimuli ($r$=0.03$\pm$0.29, $p_{1t}$=0.7 for stage 46; 0.13$\pm$.30, $p_{1t}$=0.1 for stage 49). This further demonstrates that during collisions, the majority of cells in the tectum responded to stimulus dynamics, rather than to its geometry.
+%The difference between full brain responses to looming and scrambled stimuli was even more diverse: some preparations did not have a preference between these stimuli ($p>$ 0.05; 9/14 and 7/16 for younger and older tadpoles respectively), some preferred looming stimuli to scrambled (1/14 and 4/16), while some preferred scrambled stimuli to looming (4/14 and 5/16). This individualized preference was most likely an artifact of our experimental approach, as “scrambled” stimuli were uniquely rearranged for each experiment, but were kept constant within each experimental session. It seems that this design produced less salient stimuli in some experiments, but more salient stimuli in others.
+
+We then considered the second, more computationally demanding definition of selectivity: a preference for spatially organized looming stimuli over scrambled stimuli. On average, tectal cells did not respond stronger to either of these stimuli (average selectivity of $-$0.07$\pm$0.33 in younger tadpoles, $-$0.04$\pm$0.49 in older ones), and the value of average selectivity did not change in development ($p_t=$ 0.9). The share of cells that responded to looming stronger than to scrambled was at a chance level for both developmental stages (46$\pm$31\%, 48$\pm$37\%, $p_t=$ 0.9), and there was no change in either within-brain variance of this selectivity ($p_t=$ 0.9), or the 90$-$50 percentile asymmetry of values ($p_t=$ 0.8).
+
+The selectivity for scrambled stimuli over flashes correlated with selectivity for looming stimuli over flashes in both developmental groups: within-brain $r$=0.82$\pm$0.13, $p_{1t}$=3e-12 for younger animals, and 0.75$\pm$0.18, $p_{t1}$=3e-11 older ones; no change in development ($p_t$=0.3). On the contrary, the preference for looming over flashes did not correlate with preference for looming over scrambled ($r$=0.03$\pm$0.29, $p_{1t}$=0.7 for stage 46; 0.13$\pm$.30, $p_{1t}$=0.1 for stage 49). This further suggests that at least the majority of cells in the tectum responded to stimulus dynamics, rather than to its geometry.
 
 To assess the cell-to-cell variability of responses, we performed exploratory factor analysis (principal component analysis, followed by promax rotation) of cell responses within each brain. We restricted this analysis to responses to one stimulus type at a time, as otherwise factor analysis detected cell-to-cell differences in stimulus selectivity, while we wanted to look at cell-to-cell differences in dynamics within each response type. For looming stimuli, the 1st and 2nd principal components explained on average 19$\pm$7\% and 4$\pm$1\% of variance in younger tadpoles, and 24$\pm$14\% and 3$\pm$1\% in older tadpoles. The biggest source of variance in cell response profiles was response latency (Fig). We noticed that in each experiment early responding cells tended to group together in one part of the recorded field (Fig). We found the “center” of this group of early-responding cells in each recording, by maximizing the correlation between distances from each cell to this center of interest, and relative scores of the early component in cell responses (Fig). The fit was robust, with $p<$0.05 in every experiment (30/30), and average achieved correlation of $r$=0.59$\pm$0.23. To verify that this was not a result of overfitting, we shuffled cell identities for each experiment 5 times, and repeated the analysis, which led to average $r$ values of 0.13$\pm$0.06 and $p_r<$0.05 in only 21\% of experiments. From that we concluded that spatial clustering of early responses to looming stimuli was real, and not an analysis artifact. We interpreted this clustering of early responses as a direct observation of a retinotopic map in the tectum \citep{ruthazer2004map}. For each cell, we also estimated the latency of its average response, and this latency positively correlated with distance from the “retinotopy center” (average $r=$ 0.35$\pm$0.24; correlations individually significant in 25/30 experiments). Curiously, while visual projections to the tectum are known to be actively remodeled in development \citep{sakaguchi1985refinement,ruthazer2004map,munz2014hebbian}, there was no difference in precision of this functional retinotopic map between younger and older tadpoles, as best fit correlation coefficients did not increase in development ($r$=0.63$\pm$0.21 and 0.57$\pm$0.25 respectively, $p_t$=0.5), which is reminiscent of a similar result in Zebrafish \citep{avitan2016limitations}.
 
