Results: minor changes, references to figures

--- a/main.tex
+++ b/main.tex
@@ -83,7 +83,7 @@ Arseny S. Khakhalin\textsuperscript{1,*}
 * Correspondence: khakhalin@bard.edu
 
 \section*{Abstract}
-Visual looming is one of the most salient sensory stimuli a seeing animal may encounter, yet mechanisms of looming detection in vertebrates are still purely understood. For many animals, key computations for looming detection and collision avoidance seem to occur in distributed networks in the midbrain, making its hard to tease out the mechanics of these calculations. In this study, we contrast a computational developmental model of the optic tectum with analysis of directed connectivity graphs reconstructed from high-speed Ca imaging recording in Xenopus tadpoles. We report a difference in graph properties of tectal networks reconstructed from younger and older tadpoles, with degree distributions and network modularity changing in development. We also describe that in tadpoles, looming-selective cells tended to receive more inputs, and had higher Katz centrality than non-selective cells. We compare these observations to predictions of a computational model governed by spike-time-dependent plasticity, homeostatic intrinsic plasticity, synaptic competition, and structured visual information. We show that our model network quickly developed robust looming selectivity, and replicated several changes in network properties, including increase in modularity and changes in degree distributions. Some other changes predicted by the model (hierarchy, efficiency, spatial distribution of selective cells) were however not observed in biological experiments. Finally, by comparing several alternative models, we show which developmental rules were most critical for the development of looming selectivity.
+Visual looming is one of the most salient sensory stimuli a seeing animal may encounter, yet mechanisms of looming detection in vertebrates are still purely understood. For many animals, key computations for looming detection and collision avoidance seem to occur in distributed networks in the midbrain, making its hard to tease out the mechanics of these calculations. In this study, we contrast a computational developmental model of the optic tectum with analysis of directed connectivity graphs reconstructed from high-speed Ca imaging recording in Xenopus tadpoles. We report a difference in graph properties of tectal networks reconstructed from younger and older tadpoles, with degree distributions and network modularity changing in development. We also describe that in tadpoles, looming-selective cells tended to receive more inputs, and had higher Katz centrality than non-selective cells. We compare these observations to predictions of a firing rate model governed by spike-time-dependent plasticity, homeostatic intrinsic plasticity, synaptic competition, and structured visual information. We show that our model network quickly developed robust looming selectivity, and replicated several changes in network properties, including increase in modularity and changes in degree distributions. Some other changes predicted by the model (hierarchy, efficiency, spatial distribution of selective cells) were however not observed in biological experiments. Finally, by comparing several alternative models, we show which developmental rules were most critical for the development of looming selectivity.
 %TC:ignore 
 \bigskip
 
@@ -126,13 +126,13 @@ To quantify selectivity of individual tectal cells, we used Cohen’s $d$ effect
 
 We then considered the second, more computationally demanding definition of selectivity: a preference for spatially organized looming stimuli over scrambled stimuli. On average, tectal cells did not respond stronger to either of these stimuli (average selectivity of $-$0.07$\pm$0.33 in younger tadpoles, $-$0.04$\pm$0.49 in older ones), and the value of average selectivity did not change in development ($p_t=$ 0.9). The share of cells that responded to looming stronger than to scrambled was at a chance level for both developmental stages (46$\pm$31\%, 48$\pm$37\%, $p_t=$ 0.9), and there was no change in either within-brain variance of this selectivity ($p_t=$ 0.9), or the 90$-$50 percentile asymmetry of values ($p_t=$ 0.8).
 
-The selectivity for scrambled stimuli over flashes correlated with selectivity for looming stimuli over flashes in both developmental groups: within-brain $r$=0.82$\pm$0.13, $p_{1t}$=3e-12 for younger animals, and 0.75$\pm$0.18, $p_{t1}$=3e-11 older ones; no change in development ($p_t$=0.3). On the contrary, the preference for looming over flashes did not correlate with preference for looming over scrambled ($r$=0.03$\pm$0.29, $p_{1t}$=0.7 for stage 46; 0.13$\pm$.30, $p_{1t}$=0.1 for stage 49). This further suggests that at least the majority of cells in the tectum responded to stimulus dynamics, rather than to its geometry.
+The selectivity for scrambled stimuli over flashes correlated with selectivity for looming stimuli over flashes in both developmental groups: within-brain $r$=0.82$\pm$0.13, $p_{1t}$=3e-12 for younger animals, and 0.75$\pm$0.18, $p_{t1}$=3e-11 older ones (Fig 2D); no change in development ($p_t$=0.3). On the contrary, the preference for looming over flashes did not correlate with preference for looming over scrambled (Fig 2F; $r$=0.03$\pm$0.29, $p_{1t}$=0.7 for stage 46; 0.13$\pm$.30, $p_{1t}$=0.1 for stage 49). This further suggests that at least the majority of cells in the tectum responded to stimulus dynamics, rather than to its geometry.
 
-To assess the cell-to-cell variability of responses, we performed exploratory factor analysis (principal component analysis, followed by promax rotation) of cell responses within each brain. We restricted this analysis to responses to one stimulus type at a time, as otherwise factor analysis detected cell-to-cell differences in stimulus selectivity, while we wanted to look at cell-to-cell differences in dynamics within each response type. For looming stimuli, the 1st and 2nd principal components explained on average 19$\pm$7\% and 4$\pm$1\% of variance in younger tadpoles, and 24$\pm$14\% and 3$\pm$1\% in older tadpoles. The biggest source of variance in cell response profiles was response latency (Fig). We noticed that in each experiment early responding cells tended to group together in one part of the recorded field (Fig). We found the “center” of this group of early-responding cells in each recording, by maximizing the correlation between distances from each cell to this center of interest, and relative scores of the early component in cell responses (Fig). The fit was robust, with $p<$0.05 in every experiment (30/30), and average achieved correlation of $r$=0.59$\pm$0.23. To verify that this was not a result of overfitting, we shuffled cell identities for each experiment 5 times, and repeated the analysis, which led to average $r$ values of 0.13$\pm$0.06 and $p_r<$0.05 in only 21\% of experiments. From that we concluded that spatial clustering of early responses to looming stimuli was real, and not an analysis artifact. We interpreted this clustering of early responses as a direct observation of a retinotopic map in the tectum \citep{ruthazer2004map}. For each cell, we also estimated the latency of its average response, and this latency positively correlated with distance from the “retinotopy center” (average $r=$ 0.35$\pm$0.24; correlations individually significant in 25/30 experiments). Curiously, while visual projections to the tectum are known to be actively remodeled in development \citep{sakaguchi1985refinement,ruthazer2004map,munz2014hebbian}, there was no difference in precision of this functional retinotopic map between younger and older tadpoles, as best fit correlation coefficients did not increase in development ($r$=0.63$\pm$0.21 and 0.57$\pm$0.25 respectively, $p_t$=0.5), which is reminiscent of a similar result in Zebrafish \citep{avitan2016limitations}.
+To assess the cell-to-cell variability of responses, we performed exploratory factor analysis (principal component analysis, followed by promax rotation) of cell responses within each preparation. We restricted this analysis to responses to one stimulus type (looming), as otherwise factor analysis detected cell-to-cell differences in stimulus selectivity, while we wanted to look at differences in dynamics within a response type. The first and second principal components explained on average 19$\pm$7\% and 4$\pm$1\% of variance in younger tadpoles, and 24$\pm$14\% and 3$\pm$1\% in older tadpoles. The biggest source of variance in cell response profiles was response latency (Fig 3A), and we noticed that early responding cells tended to group together in one part of the recorded field (Fig 3B). We found the “center” of this group of early-responding cells in each experiment, by maximizing the correlation between distances to this center of interest, and relative scores of the early response component in each cell. The fit was robust, with $p<$0.05 in every experiment (30/30), and average achieved correlation of $r$=0.59$\pm$0.23 (Fig. 3C). To exclude the possibility of overfitting, we shuffled cell identities for each experiment 5 times, and repeated the analysis, which led to average $r$ values of only 0.13$\pm$0.06 and $p_r<$0.05 in 21\% of experiments. From that we concluded that spatial clustering of early responses to looming stimuli was not an artifact of analysis, even though our "optimization of correlations" may exaggerate the effect of this correlation. We interpreted clustering of early responses as a direct observation of a retinotopic map in the tectum \citep{ruthazer2004map}. For each cell, we also estimated the latency of its average response, and found that it positively correlated with distance from the “retinotopy center” (Fig. 3D; average $r=$ 0.35$\pm$0.24; correlations individually significant in 25/30 experiments). Curiously, while visual projections to the tectum are known to be actively remodeled in development \citep{sakaguchi1985refinement,ruthazer2004map,munz2014hebbian}, there was no difference in precision of this functional retinotopic map between younger and older tadpoles, as correlation between the prominence of early response and distance from the retinotopy center did not improve in development (Fig. 3E; $r$=0.63$\pm$0.21 and 0.57$\pm$0.25 respectively, $p_t$=0.5), reminiscent of a similar result reported in Zebrafish \citep{avitan2016limitations}.
 
-Knowing where our looming stimulus is projected, we could then check whether looming-selective cells were more likely to be found in the center of the expanding activation area (as it would be expected if collision detection was local and retinotopic \citep{frost2004review}, or if it was primarily based on feedback excitation \citep{jang2016}, or at the periphery (as predicted by the synfire model [refs]). We found that selectivity for looming stimuli over flash tended to decrease with distance from the estimated projection center (Fig) for both stage 45 (average $r=-$0.37$\pm$0.27; individual correlations significant $p_r<$0.05 in 12/14 individual experiments), and stage 49 tadpoles (average $r=-$0.09$\pm$0.35; individual $p_r<$0.05 in 12/16 experiments), indicating that looming-selective cells tended to be located in the center of the emerging spatial response. Similarly, in both younger and older tadpoles, selectivity decreased with response latency (stage 46: $p_r<$0.05 in 11/14 animals, average $r=-$0.29$\pm$0.11; stage 49: $p_r<$0.05 in 10/16 animals, average $r=-$0.16$\pm$0.21). Both correlations were weaker in older tadpoles ($p_t=$ 0.02 for distance-selectivity, $p_t=$ 0.03 for latency-selectivity), indicating a more uniform distribution of looming-selective cells within the network.
+Knowing where our looming stimulus originated within the retinotopic map in the tectum, we could then check whether looming-selective cells were more likely to be found in the center of the expanding activation area (as it would be expected if collision detection was local and retinotopic \citep{frost2004review}, or if it was primarily based on feedback excitation \citep{jang2016}, or at the periphery (as predicted by the synfire model [XXX]). We found that selectivity for looming stimuli over flash tended to decrease with distance from the estimated projection center (Fig 3G) for both stage 45 (average $r=-$0.37$\pm$0.27; individual correlations $p_r<$0.05 in 12/14 experiments), and stage 49 tadpoles (average $r=-$0.09$\pm$0.35; $p_r<$0.05 in 12/16 experiments), indicating that looming-selective cells tended to be located in the center of the emerging spatial response. Similarly, at both developmental stages, selectivity decreased with response latency (stage 46: $p_r<$0.05 in 11/14 animals, average $r=-$0.29$\pm$0.11; stage 49: $p_r<$0.05 in 10/16 animals, average $r=-$0.16$\pm$0.21). Both correlations were weaker in older tadpoles (Fig 3H; $p_t=$ 0.02 for distance-selectivity, $p_t=$ 0.03 for latency-selectivity), indicating a more uniform distribution of looming-selective cells within the network.
 
-Finally, as a most holistic way to quantify overall tectal network selectivity, we looked at the total predictive power of tectal responses \citep{avitan2016limitations}. To do so, we ran a logistic regression on one half of data, linking the total response of each recorded tectal cell in each trial to the visual stimulus type used in this trial. Then we measured the quality of this linkage on the second half of recorded data. The quality of prediction was rather low: 59$\pm$12\% for younger, and 62$\pm$13\% for older tadpoles, with no change in development ($p_t$=0.6).
+Finally, as a most holistic way to quantify overall tectal network selectivity, we looked at the total predictive power of tectal responses \citep{avitan2016limitations}. To do so, we ran a logistic regression on one half of data, linking responses of individual tectal cells in each trial to the type of stimulus used in this trial. Then we measured the quality of this linkage on the second half of recorded data. The quality of prediction was rather low: 59$\pm$12\% for younger, and 62$\pm$13\% for older tadpoles, with no change in development ($p_t$=0.6).
 
 \subsection*{Variability and ensembles}
 
@@ -186,9 +186,9 @@ We also hypothesized that on average selectivity for looming stimuli may gradual
 
 \subsection*{Developmental Model}
 
-As tectal networks we studied are complex and noisy, it is hard to provide a clear mechanistic interpretation of our results, especially as in some cases we used alternative ways to quantify the same intuition, and found the evidence conflicting. For example, for statistical network properties (Fig), the effects of non-random degree distribution and mesoscale graph structure often affected network properties in opposite directions, leading to small total effects. Similarly, when we tried to quantify the “integrative” position of each cell within the connectivity graph, only some of these measurements correlated with cell selectivity for looming stimuli, and it was not clear which of these measurements are objectively “better”, in terms of encapsulating the true properties of the network.
+As the networks we studied are complex and noisy, it was hard to provide a clear mechanistic interpretation of our results, especially as in some cases when we used alternative ways to quantify the same intuition, we found the evidence conflicting. For example, for statistical network properties, the effects of non-random degree distribution and mesoscale graph structure often affected network properties in opposite directions (Fig), leading to small total effects. Similarly, when we tried to quantify how “integrative” was the position of each cell within the connectivity graph, only some of these measurements correlated with cell selectivity for looming stimuli, and it was not clear which of these measurements are objectively “better”, in terms of reflecting the true properties of the network.
 
-To compensate for these limitations, and to provide a theoretical counterpoint to our observations, we created a mathematical model of the developing tectum, and ran this model through the same set of measurements that we applied to our experiments. The model consisted of 81 artificial neurons, arranged in a 9 by 9 grid, that were originally all connected to each other (every neuron to every neuron) with random positive (excitatory) synaptic weights (Fig). The model operated in 10 ms increments, and we interpreted the output of each neuron as its expected spiking frequency. At each time frame we looked at the activity of the network in the previous frame, calculated the synaptic inputs each neuron would send to each other neuron, and summed them up to calculate the total activation of each neuron. We then used a sliding logistic function to estimate the probability of spiking in postsynaptic neurons, in response to this total activation. See “Methods” for the formulas, and the detailed description of the model.
+To compensate for these limitations, and to provide a theoretical counterpoint to our observations, we created a mathematical model of the developing tectum, and ran this model through the same set of measurements that we applied to our experiments. The model consisted of 81 artificial neurons, arranged in a 9 by 9 grid, that were originally all connected to each other (every neuron to every neuron) with random positive (excitatory) synaptic weights (Fig). The model operated in 10 ms increments, and we interpreted the output of each neuron as its expected firing rate. At each time frame we looked at the activity of the network in the previous frame, calculated the synaptic inputs each neuron would send to each other neuron, and summed them up to calculate the total activation of each neuron. We then used a sliding logistic function to estimate the probability of spiking in postsynaptic neurons, in response to this total activation. See “Methods” for the formulas, and the detailed description of the model.
 
 To allow the network develop in time, we introduced three simple developmental rules: spike-time-dependent plasticity (STDP), homeostatic plasticity, and synaptic competition. Our implementation of STDP approximated biological STDP, as observed in the tadpole tectum \citep{zhang1998stdp,mu2006stdp}: if two cells were active in two consecutive 10 ms time frames, and they were connected with a synapse, the weight of this synapse was increased. Conversely, if two cells were active within the same time frame, the weight of a synapse connecting them was decreased, as it means that one cell would try to activate another cell after it already spiked. The homeostatic plasticity adjusted the excitability threshold of each neuron, trying to keep its spiking output constant on average \citep{pratt2007intrinsic,turrigiano2011}. The synaptic competition attempted to keep the total strength of synaptic inputs to each neuron, as well as the total strength of synaptic outputs from each neuron, close to constant, by scaling all other synapses of both input and output neurons down every time one synapse increased in efficiency \citep{hamodi2016nmda,cohen2002synreview,munz2014hebbian}.
 
@@ -420,7 +420,7 @@ Note that this definition seems to differ slightly from the one used in the Brai
 
 \subsection*{Developmental Model}
 
-The model consisted of $n$=81 cells, arranged in a 9x9 grid. The model operated in discrete time, and was run for 500 epochs, 25 time steps each, or for $T$ = 12500 time steps total. Each cell was characterized by three values: its current activity $s_i(t)$ that represented its instantaneous spiking rate; spiking threshold $h_i(t)$ that slowly changed over time, and a constant $\hat{s_i}$ that described the target spiking rate for each cell. The target spiking rates $\hat{r_i}$ were randomly assigned at the beginning of each simulation, and were distributed normally around 5/$n$ with a standard deviation of 1/$n$, which means that once these target spiking rates were matched, on average, at any time step, 5 out of 81 cells would be spiking. The spiking thresholds $h_i$ were initialized at the beginning of each simulation with a value $h_i(0) = 1/(n \hat{s_i}) + \mathcal{N}(0,0.1)$, where $\mathcal{N}(0,0.1)$ is a random value, normally distributed around 0 with a standard deviation of 0.1.
+The model consisted of $n$=81 cells, arranged in a 9x9 grid. The model operated in discrete time, and was run for 500 epochs, 25 time steps each, or for $T$ = 12500 time steps total. Each cell was characterized by three values: its current activity $s_i(t)$ that represented its instantaneous firing rate; spiking threshold $h_i(t)$ that slowly changed over time, and a constant $\hat{s_i}$ that described the target spiking rate for each cell. The target spiking rates $\hat{r_i}$ were randomly assigned at the beginning of each simulation, and were distributed normally around 5/$n$ with a standard deviation of 1/$n$, which means that once these target spiking rates were matched, on average, at any time step, 5 out of 81 cells would be spiking. The spiking thresholds $h_i$ were initialized at the beginning of each simulation with a value $h_i(0) = 1/(n \hat{s_i}) + \mathcal{N}(0,0.1)$, where $\mathcal{N}(0,0.1)$ is a random value, normally distributed around 0 with a standard deviation of 0.1.
 
 Cells were connected to each other with “synapses” of different strengths, represented by a weight matrix \textbf{W}, with weight $0 \leqslant w_{ji} \leqslant 1$ leading from cell $i$ to cell $j$. At the beginning of each simulation the weights were assigned random values, uniformly distributed between 0 and 1, except for self-connections (loops, $w_{ii}$) that were set to 0.
 
